New tests for incorrect credentials, new testData configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-USER_LOGIN="Login"
-USER_PASSWORD="Password"
+USER_LOGIN_CORRECT="CORRECT LOGIN"
+USER_PASSWORD_CORRECT="CORRECT PASSWORD"
+
+USER_LOGIN_INCORRECT = "INCORRECT LOGIN"
+USER_PASSWORD_INCORRECT = "INCORRECT PASSWORD"
