--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ main, master ]
 
+env:
+      USER_LOGIN_CORRECT: ${{ secrets.USER_LOGIN_CORRECT }}
+      USER_PASSWORD_CORRECT: ${{ secrets.USER_PASSWORD_CORRECT }}
+      USER_LOGIN_INCORRECT: ${{ secrets.USER_LOGIN_INCORRECT }}
+      USER_PASSWORD_INCORRECT: ${{ secrets.USER_PASSWORD_INCORRECT }}
+    
 jobs:
   test:
     timeout-minutes: 60
