--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-USER_LOGIN_CORRECT="CORRECT LOGIN xddd"
-USER_PASSWORD_CORRECT="CORRECT PASSWORD xddd"
+USER_LOGIN_CORRECT="CORRECT LOGIN"
+USER_PASSWORD_CORRECT="CORRECT PASSWORD"
 
 USER_LOGIN_INCORRECT = "INCORRECT LOGIN"
 USER_PASSWORD_INCORRECT = "INCORRECT PASSWORD"
